Fixed header icon and spacing

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -48,6 +48,7 @@
   }
 
   .toggle-navbar-btn {
+    padding: 0px;
     background: none;
     border: none;
     color: var(--primary-white);
@@ -55,8 +56,6 @@
     font-weight: bold;
     cursor: pointer;
     position: relative;
-    padding: 0 20px;
-    display: inline-flex;
     align-items: center;
   }
   
