--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,10 @@ header, footer{
   height: 50px;
 }
 
+.menu_icon img{
+  height: 50px;
+}
+
 a {
   text-decoration: none;
   color: black;
